--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,9 @@
 	"editor.detectIndentation": false,
 	"editor.codeActionsOnSave": {
 		"source.fixAll": true,
-		"source.organizeImports": true
+		"source.organizeImports": true,
 	},
+	"editor.formatOnSave": true,
 	"eslint.validate": [
 		"javascript",
 		"typescript",
@@ -12,6 +13,7 @@
 	"files.eol": "\n",
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"cSpell.words": [
+		"cond",
 		"xstate"
 	]
 }
