--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-    "name": "challenge",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "build": "tsc",
+	"name": "challenge",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "tsc",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
-        "start": "ts-node src/game.ts",
-        "test": "ts-mocha -p tsconfig.json src/**/*.spec.ts"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/expect": "^24.3.0",
-        "@types/mocha": "^7.0.2",
-        "@types/node": "^14.0.10",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
-        "eslint": "^7.25.0",
-        "eslint-config-prettier": "^8.3.0",
-        "expect": "^26.0.1",
-        "mocha": "^7.2.0",
-        "prettier": "^2.2.1",
-        "ts-mocha": "^7.0.0",
-        "ts-node": "^9.1.1",
-        "typescript": "^3.9.3"
-    },
-    "dependencies": {
-        "xstate": "^4.18.0"
-    }
+		"start": "ts-node src/game.ts",
+		"test": "ts-mocha -p tsconfig.json **/**/*.spec.ts"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/expect": "^24.3.0",
+		"@types/mocha": "^7.0.2",
+		"@types/node": "^14.0.10",
+		"@typescript-eslint/eslint-plugin": "^4.22.0",
+		"@typescript-eslint/parser": "^4.22.0",
+		"eslint": "^7.25.0",
+		"eslint-config-prettier": "^8.3.0",
+		"expect": "^26.0.1",
+		"mocha": "^7.2.0",
+		"prettier": "^2.2.1",
+		"ts-mocha": "^7.0.0",
+		"ts-node": "^9.1.1",
+		"typescript": "^3.9.3"
+	},
+	"dependencies": {
+		"xstate": "^4.18.0"
+	}
 }
