--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"start": "ts-node src/game.ts",
-		"test": "ts-mocha -p tsconfig.json **/**/*.spec.ts"
+		"test": "ts-mocha -p tsconfig.json src/**/*.spec.ts"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
 		"@types/expect": "^24.3.0",
-		"@types/mocha": "^7.0.2",
-		"@types/node": "^14.0.10",
+		"@types/mocha": "^10.0.8",
+		"@types/node": "^22.5.5",
 		"@typescript-eslint/eslint-plugin": "^4.22.0",
 		"@typescript-eslint/parser": "^4.22.0",
 		"eslint": "^7.25.0",
 		"eslint-config-prettier": "^8.3.0",
-		"expect": "^26.0.1",
+		"expect": "^29.7.0",
 		"mocha": "^7.2.0",
 		"prettier": "^2.2.1",
-		"ts-mocha": "^7.0.0",
-		"ts-node": "^9.1.1",
-		"typescript": "^3.9.3"
+		"ts-mocha": "^10.0.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.6.2"
 	},
 	"dependencies": {
-		"xstate": "^4.18.0"
+		"xstate": "^5.18.2"
 	}
 }
